--- a/client/src/styles/content-box/FeaturesBlock.css
+++ b/client/src/styles/content-box/FeaturesBlock.css
@@ -2,6 +2,8 @@
     display:flex;
     justify-content: center;
     align-items: center;
+    padding-bottom:120px; 
+    
 }
 
 .feature{
@@ -54,5 +56,6 @@
         flex-direction: column;
     }
 }
+
 
 
